--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
