--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@headlessui/react": "^2.2.4",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
     "next": "^15.2.3",
