add payment with stripe and create order table in db

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,24 @@
-AUTH_SECRET=""
+# General
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_MAIN_PRODUCT_SLUG="main-product"
 
+# Auth
+AUTH_SECRET=""
 AUTH_GITHUB_ID=""
 AUTH_GITHUB_SECRET=""
+AUTH_RESEND_KEY=""
+AUTH_TRUST_HOST=http://localhost:3000 
 
+# Db
 DATABASE_URL=""
 
-RESEND_API_KEY=""
-EMAIL_FROM = ""
+#Resend
+EMAIL_FROM=""
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+
+# Stripe
+STRIPE_SECRET_KEY=""
