--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
+    "stripe": "^18.3.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.5"
   },
